--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<h1> Muhammad Abdul Ghofar</h1>
-<h3>Surakarta, Indonesia</h3>
-<p System Analyst/>
-
+<html>
+      <h1> Muhammad Abdul Ghofar</h1>
+      <h3>Surakarta, Indonesia</h3>
+      <p System Analyst/>
+</html>
